Day ?: Change css, including adding MUI library.
- Makes whole screen button for advancing next player.
- Calculates the timer on a per-centisecond basis

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+#root {
+  height: 100%;
 }
 
 code {
