--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 40px;
   pointer-events: none;
 }
 
@@ -15,17 +15,22 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 64px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: left;
+  font-size: 24px;
   color: white;
+  box-shadow: 4px 0px 10px 10px #000;
+  z-index: 100;
 }
 
-.App-link {
-  color: #61dafb;
+.App-body {
+  background-color: #686c74;
+  height: calc(100vh - 64px);
+  overflow: hidden;
+  z-index: 1;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +40,49 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+
+.form-wrapper {
+  width: 100%;
+  background-color: #686c74;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.form {
+  padding: 10px;
+  flex: 1;
+}
+
+.timer-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+.selected, .unselected {
+  background-color: white;
+  border: gray;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.selected {
+  flex: 3;
+  font-size: 6em;
+}
+
+.unselected {
+  flex: 1;
+  font-size: 3em;
 }
